--- a/scss/_sketches.scss
+++ b/scss/_sketches.scss
@@ -85,8 +85,13 @@ a{
 }
 
 .inner{
-    max-width: 1024px;
+    max-width: 1180px;
     margin: 0 auto;
+    @if $adaptive == true {
+        @media (max-width: 1024px){
+            max-width: 1024px;
+        }
+    }
 }
 
 .icon{
