--- a/jade/index.jade
+++ b/jade/index.jade
@@ -68,11 +68,24 @@ block content
         .inner
             .container-fluid
                 .row
-                    .col-sm-4
+                    .col-md-4.col-sm-6.col-xs-12
                         .title-go
                             h2 ОРГАНИЗАТОРЫ <br>КОНФЕРЕНЦИИ
-                    .col-sm-8
+                        .left-org
+                            img(src="img/vox.png")
+                    .col-md-8.col-sm-6.col-xs-12
                        .right-organize
                            .title-go
                                h2 ПАРТНЕРЫ <br>КОНФЕРЕНЦИИ
+
+                           .right-org
+                               ul
+                                   li
+                                    img(src="img/p1.jpg")
+                                   li
+                                    img(src="img/p2.jpg")
+                                   li
+                                    img(src="img/p3.jpg")
+                                   li
+                                    img(src="img/p4.jpg")
 
