--- a/jade/index.jade
+++ b/jade/index.jade
@@ -64,6 +64,61 @@ block content
                             a(href="#") Записаться на трансляцию
                         .video-book
                             img(src="img/bg-book.jpg")
+    .vote-new
+        .inner
+            .container-fluid
+                .row
+                    .col-xs-12
+                        .title-go.title-go-all
+                            h2 Что нового в этом году
+                        ul
+                            li
+                                .img-left-vote
+                                    img(src='img/new1.png')
+                                p Двухдневный формат<br> конференции
+
+                            li
+                                .img-left-vote
+                                    img(src='img/new2.png')
+                                p Большой зал
+                                  br.sm-br
+                                  |  <br>для докладов
+
+                            li
+                                .img-left-vote
+                                    img(src='img/new3.png')
+                                p Малый зал <br>для мастер-классов
+
+                            li
+                                .img-left-vote
+                                    img(src='img/new4.png')
+                                p Экспозона с
+                                  br.sm-br
+                                  |  демонстрацией <br> нового оборудования и<br>
+                                  br.sm-br
+                                  |  стендами с софтом
+
+                            li
+                                .img-left-vote
+                                    img(src='img/new5.png')
+                                p Онлайн-трансляция
+                                  br.sm-br
+                                  |  обоих<br> залов
+
+                            li
+                                .img-left-vote
+                                    img(src='img/new6.png')
+                                p Выступления с кейсами
+                                  br.sm-br
+                                  |  от <br> обычных
+                                  br.sm-br
+                                  |  пользователей
+
+                            li
+                                .img-left-vote
+                                    img(src='img/new7.png')
+                                p Большая секция для<br> разработчиков: практикум по<br> разработке внутри Asterisk и<br> снаружи Asterisk
+
     .organize
         .inner
             .container-fluid
